[gd_scene load_steps=11 format=3 uid="uid://dkhg8e00d02f2"]

[ext_resource type="Script" path="res://navmesh.gd" id="1"]
[ext_resource type="Script" path="res://HUD.gd" id="2_1iycq"]
[ext_resource type="Script" path="res://scripts/Button.gd" id="2_dlc7e"]
[ext_resource type="NavigationMesh" uid="uid://ii7ckx3dvrs2" path="res://navmesh.res" id="2_lcfvj"]
[ext_resource type="ArrayMesh" uid="uid://gmytdjp2bcsq" path="res://level_mesh.res" id="3_1cas0"]
[ext_resource type="Script" path="res://character.gd" id="4_u7d3d"]
[ext_resource type="ArrayMesh" uid="uid://prwe6io8p1iv" path="res://robot.res" id="5_ple0n"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ps07l"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_baxfs"]
sky_material = SubResource("ProceduralSkyMaterial_ps07l")

[sub_resource type="Environment" id="Environment_c0if4"]
background_mode = 2
sky = SubResource("Sky_baxfs")
tonemap_mode = 3
tonemap_white = 6.0

[node name="NavMesh" type="Node3D"]
_import_path = NodePath(".")
script = ExtResource("1")

[node name="HUD" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_1iycq")

[node name="Button" type="Button" parent="HUD"]
offset_right = 92.0
offset_bottom = 31.0
keep_pressed_outside = true
text = "Swap"
script = ExtResource("2_dlc7e")

[node name="Button2" type="Button" parent="HUD"]
offset_left = 96.0
offset_top = 1.0
offset_right = 199.0
offset_bottom = 32.0
keep_pressed_outside = true
text = "Both"
script = ExtResource("2_dlc7e")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_c0if4")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.723713, -0.678436, -0.12635, -0.277002, 0.11789, 0.95361, -0.632068, 0.725139, -0.273247, 10.0773, 5.02381, 0)
shadow_enabled = true
directional_shadow_mode = 0
directional_shadow_fade_start = 1.0
directional_shadow_max_distance = 35.0

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = ExtResource("2_lcfvj")

[node name="LevelMesh" type="MeshInstance3D" parent="NavigationRegion3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.0452547, 0)
mesh = ExtResource("3_1cas0")

[node name="CameraBase" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.07475, 0, 1.96678)

[node name="Camera3D" type="Camera3D" parent="CameraBase"]
transform = Transform3D(-0.560554, -0.429252, 0.708182, 0.106298, 0.8108, 0.575591, -0.821267, 0.397928, -0.408869, 18.091, 14.744, -7.017)
fov = 50.0
near = 0.1

[node name="RobotBase" type="Marker3D" parent="."]
script = ExtResource("4_u7d3d")

[node name="Robot" type="MeshInstance3D" parent="RobotBase"]
transform = Transform3D(-0.5, 0, -7.54979e-08, 0, 1, 0, 7.54979e-08, 0, -0.5, 0, 1, 0)
gi_mode = 2
mesh = ExtResource("5_ple0n")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="RobotBase"]
path_desired_distance = 0.1

[node name="RobotBase2" type="Marker3D" parent="."]
script = ExtResource("4_u7d3d")

[node name="Robot" type="MeshInstance3D" parent="RobotBase2"]
transform = Transform3D(-0.5, 0, -7.54979e-08, 0, 1, 0, 7.54979e-08, 0, -0.5, 0, 1, 0)
gi_mode = 2
mesh = ExtResource("5_ple0n")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="RobotBase2"]
path_desired_distance = 0.1
